# audio_features

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  README_PYPI.md  RELEASE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
audiofeatures/: __init__.py
audiofeatures/augmentation/: __init__.py  frequency_domain.py  time_domain.py
audiofeatures/core/: __init__.py  audio_loader.py  signal_processing.py
audiofeatures/features/: __init__.py  frequency_domain.py  spectral.py  statistical.py  time_domain.py
audiofeatures/pipeline/: __init__.py  feature_aggregation.py  feature_extraction.py
audiofeatures/preprocessing/: __init__.py  filtering.py  normalization.py  segmentation.py
audiofeatures/utils/: __init__.py  contract.py  conversion.py  io.py
audiofeatures/visualization/: __init__.py  frequency_domain.py  time_domain.py
docs/: api.md  faq.md  guide.md  index.md  installation.md  publishing.md  quickstart.md  reference.md
examples/: audio_augmentation.py  augmentation_demo.py  basic_usage.py  feature_extraction.py  feature_extraction_pipeline.py  visualization_features.py
faq/: index.html
guide/: index.html
installation/: index.html
publishing/: index.html
quickstart/: index.html
reference/: index.html
search/: search_index.json
tests/test_augmentation/: __init__.py  test_time_domain.py
tests/test_core/: test_audio_loader.py  test_signal_processing.py
tests/test_features/: __init__.py  test_frequency_domain.py  test_spectral.py  test_statistical.py  test_time_domain.py
tests/test_pipeline/: test_feature_pipeline.py
(+6 files in other folders)
